Fix computer select overflow

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -460,6 +460,9 @@
                 select {
                     flex-grow: 1;
                     min-width: 10rem;
+                    max-width: 10rem;
+                    width: 10rem;
+                    overflow: hidden;
                 }
                 
                 .fa {
